force-app/main/default/objects/SPEN_IVROperatinghours__c/SPEN_IVROperatinghours__c.object-meta.xml
<CustomObject>
    <description>IVR Operating hours object is operating on time based on start time and end time.</description>
    <label>IVR Operating hours</label>
    <nameField>
        <label>IVR Operating hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IVR Operating hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>