force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_CommunicationType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CommunicationType__c</fullName>
    <description>Communication Type</description>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voice Call</fullName>
            </value>
            <value>
                <fullName>Voice Alert</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>