force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_CurrentTimeFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CurrentTimeFormula__c</fullName>
    <description>It hold the current time.</description>
    <formula>If((DATEVALUE(NOW()) &gt;= CASE(MOD( DATE(YEAR(TODAY()), 3, 31) - DATE (1900,1,7),7),

0, DATE(YEAR(TODAY()), 3, 31),

1, DATE(YEAR(TODAY()), 3, 31)-1,

2, DATE(YEAR(TODAY()), 3, 31)-2,

3, DATE(YEAR(TODAY()), 3, 31)-3,

4, DATE(YEAR(TODAY()), 3, 31)-4,

5, DATE(YEAR(TODAY()), 3, 31)-5,

DATE(YEAR(TODAY()), 3, 31)-6

)) &amp;&amp; (DATEVALUE(NOW()) &lt;= CASE(MOD( DATE(YEAR(TODAY()), 10, 31) - DATE (1900,1,7),7),

0, DATE(YEAR(TODAY()), 10, 31),

1, DATE(YEAR(TODAY()), 10, 31)-1,

2, DATE(YEAR(TODAY()), 10, 31)-2,

3, DATE(YEAR(TODAY()), 10, 31)-3,

4, DATE(YEAR(TODAY()), 10, 31)-4,

5, DATE(YEAR(TODAY()), 10, 31)-5,

DATE(YEAR(TODAY()), 10, 31)-6

)),
TIMEVALUE(NOW()+(1/24)),
TIMEVALUE(NOW())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Time</label>
    <type>Time</type>
</CustomField>