force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_DayofWeek__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DayofWeek__c</fullName>
    <description>It allows to picks the day from the picklist in IVR Operating hours</description>
    <label>Day of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>