force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_EndTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EndTime__c</fullName>
    <description>End time field will collect the ending time of IVR Operating hours</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>