force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_EndTimeinTextFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EndTimeinTextFormula__c</fullName>
    <formula>LEFT(TEXT(SPEN_EndTime__c), 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time in Text</label>
    <type>Text</type>
</CustomField>