force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_FlowNameFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FlowNameFormula__c</fullName>
    <description>It holds Flow Name from IVR Object.</description>
    <formula>SPEN_IVR__r.SPEN_FlowName__c</formula>
    <label>Flow Name</label>
    <type>Text</type>
</CustomField>