force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_Holiday__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Holiday__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holiday field is in lookup relationship between Holiday object and IVR Operating hours.</description>
    <label>Holiday</label>
    <referenceTo>SPEN_Holiday__c</referenceTo>
    <relationshipLabel>IVR Operating hours</relationshipLabel>
    <relationshipName>IVR_Operatinghours</relationshipName>
    <type>Lookup</type>
</CustomField>