force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_HolidayDateFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HolidayDateFormula__c</fullName>
    <description>It holds date of Holiday from Holiday object.</description>
    <formula>SPEN_Holiday__r.SPEN_HolidayDate__c</formula>
    <label>Holiday Date</label>
    <type>Date</type>
</CustomField>