force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_HolidayReasonFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HolidayReasonFormula__c</fullName>
    <description>It holds value of holiday reason from holiday object.</description>
    <formula>SPEN_Holiday__r.SPEN_HolidayReason__c</formula>
    <label>Holiday Reason</label>
    <type>Text</type>
</CustomField>