force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_isActive__c.field-meta.xml
<CustomField>
    <fullName>SPEN_isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>