force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_IsCallBackEnabled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsCallBackEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Call Back Enabled</label>
    <type>Checkbox</type>
</CustomField>