force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_isDaily__c.field-meta.xml
<CustomField>
    <fullName>SPEN_isDaily__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDaily</label>
    <type>Checkbox</type>
</CustomField>