force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_IsHolidayFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsHolidayFormula__c</fullName>
    <formula>If(ISBLANK(SPEN_Holiday__c),false,true)</formula>
    <label>IsHoliday</label>
    <type>Checkbox</type>
</CustomField>