force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_IsWeekdayFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsWeekdayFormula__c</fullName>
    <description>Select the holiday from the the Weekdays checkbox</description>
    <formula>If(CASE(WEEKDAY(TODAY()), 1,&apos;Sunday&apos;,2,&apos;Monday&apos;,3,&apos;Tuesday&apos;,4,&apos;Wednesday&apos;,5,&apos;Thursday&apos;,6,&apos;Friday&apos;,&apos;Saturday&apos;)=Text(SPEN_DayofWeek__c),true,false)</formula>
    <label>Is Weekday</label>
    <type>Checkbox</type>
</CustomField>