force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_IVR__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IVR__c</fullName>
    <description>IVR field is in master details relationship with IVR object and IVR Operating hours</description>
    <label>IVR</label>
    <referenceTo>SPEN_IVR__c</referenceTo>
    <relationshipLabel>IVR Operating hours</relationshipLabel>
    <relationshipName>IVR_Operating_hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>