force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_IVRMessage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IVRMessage__c</fullName>
    <description>IVR Message field is in master details relationship with IVR Message object and IVR Operating hours</description>
    <label>IVR Message</label>
    <referenceTo>SPEN_IVRMessage__c</referenceTo>
    <relationshipLabel>IVR Operating hours</relationshipLabel>
    <relationshipName>IVR_Operating_hours</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>