force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_MessageFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MessageFormula__c</fullName>
    <description>It holds message from IVR Message object.</description>
    <formula>If(SPEN_NotOutsideHoursFormula__c,&apos;&apos;,SPEN_IVRMessage__r.SPEN_Message__c)</formula>
    <label>Message</label>
    <type>Text</type>
</CustomField>