force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_NotOutsideHoursFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NotOutsideHoursFormula__c</fullName>
    <description>This formula field check SPEN_Starttime__c is less than Current_Time__c and Current_Time__c is less than SPEN_Endtime__c</description>
    <formula>(SPEN_StartTime__c &lt; SPEN_CurrentTimeFormula__c) &amp;&amp; (SPEN_CurrentTimeFormula__c &lt; SPEN_EndTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NotOutside Hours</label>
    <type>Checkbox</type>
</CustomField>