force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_RestrictEndDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RestrictEndDate__c</fullName>
    <label>Restrict End Date</label>
    <type>DateTime</type>
</CustomField>