force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_RestrictStartDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RestrictStartDate__c</fullName>
    <description>Restrict Start Date for Operating Hours</description>
    <label>Restrict Start Date</label>
    <type>DateTime</type>
</CustomField>