force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_StartTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StartTime__c</fullName>
    <description>Start time field will collect the starting time of IVR Operating hours</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>