force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/SPEN_StartTimeinTextFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StartTimeinTextFormula__c</fullName>
    <formula>LEFT(TEXT(SPEN_StartTime__c), 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time in Text</label>
    <type>Text</type>
</CustomField>