force-app/main/default/objects/SPEN_IVROperatinghours__c/fields/TestCurrentTime__c.field-meta.xml
<CustomField>
    <fullName>TestCurrentTime__c</fullName>
    <formula>IF ( DATEVALUE(NOW()) &gt;=
DATE ( YEAR (DATEVALUE(NOW())),3,1)
+
(
28-
CASE( MOD(DATE ( YEAR (DATEVALUE(NOW())),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(NOW())),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(NOW()) &lt;
DATE ( YEAR (DATEVALUE(NOW())),10,1)
+
(
28-
CASE( MOD(DATE ( YEAR (DATEVALUE(NOW())),10,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(NOW())),10,1) - DATE (1900,1,7),7))
),
LEFT ( TEXT (NOW()+ 1/24), 16),
LEFT ( TEXT (NOW()), 16)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestCurrentTime</label>
    <type>Text</type>
</CustomField>