force-app/main/default/objects/SPEN_IVROperatinghours__c/recordTypes/Outbound_Contact_Hours.recordType-meta.xml
<RecordType>
    <fullName>Outbound_Contact_Hours</fullName>
    <active>true</active>
    <description>Outbound Contact Hours</description>
    <label>Outbound Contact Hours</label>
</RecordType>