force-app/main/default/objects/SPEN_IVROperatinghours__c/recordTypes/SPEN_Callback.recordType-meta.xml
<RecordType>
    <fullName>SPEN_Callback</fullName>
    <active>true</active>
    <description>Callback</description>
    <label>Callback</label>
</RecordType>