force-app/main/default/objects/SPEN_IVROperatinghours__c/recordTypes/SPEN_IVRPrompt.recordType-meta.xml
<RecordType>
    <fullName>SPEN_IVRPrompt</fullName>
    <active>true</active>
    <description>IVR Prompt</description>
    <label>IVR Prompt</label>
</RecordType>