force-app/main/default/objects/SPEN_IVROperatinghours__c/recordTypes/SPEN_SMSBlackoutWindow.recordType-meta.xml
<RecordType>
    <fullName>SPEN_SMSBlackoutWindow</fullName>
    <active>true</active>
    <label>SMS Blackout Window</label>
</RecordType>