force-app/main/default/objects/SPEN_IVROperatinghours__c/recordTypes/SPEN_VABlackoutWindow.recordType-meta.xml
<RecordType>
    <fullName>SPEN_VABlackoutWindow</fullName>
    <active>true</active>
    <label>VA Blackout Window</label>
</RecordType>