force-app/main/default/objects/SPEN_IVROperatinghours__c/validationRules/SPEN_IsDailyNotChecked.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_IsDailyNotChecked</fullName>
    <active>true</active>
    <errorConditionFormula>(If(RecordType.Name = &apos;Outbound Contact Hours&apos;, true, false) &amp;&amp; if(!SPEN_isDaily__c, true, false) &amp;&amp; (!ISBLANK( SPEN_StartTime__c ) &amp;&amp;  !ISBLANK( SPEN_EndTime__c )))</errorConditionFormula>
    <errorMessage>Start time and End time can be populated only if is daily checkbox is checked.</errorMessage>
</ValidationRule>