force-app/main/default/objects/SPEN_IVROperatinghours__c/validationRules/SPEN_startEndTimeNotBlankForSMSVA.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_startEndTimeNotBlankForSMSVA</fullName>
    <active>true</active>
    <description>This validation rule ensures that Start Time and End Time field is not blank.</description>
    <errorConditionFormula>IF( AND(OR( RecordType.Name =&quot;SMS Blackout Window&quot;,RecordType.Name=&quot;VA Blackout Window&quot;), OR(AND(ISBLANK(SPEN_StartTime__c ),NOT(ISBLANK(SPEN_EndTime__c))), AND(NOT(ISBLANK(SPEN_StartTime__c)),ISBLANK(SPEN_EndTime__c ))))  , true, false)</errorConditionFormula>
    <errorMessage>Please check the Start time and End time.</errorMessage>
</ValidationRule>