force-app/main/default/objects/SPEN_IVROperatinghours__c/listViews/Connections_IVR_Operating_Hours.listView-meta.xml
<ListView>
    <fullName>Connections_IVR_Operating_Hours</fullName>
    <columns>NAME</columns>
    <columns>SPEN_IVR__c</columns>
    <columns>SPEN_IVRMessage__c</columns>
    <columns>SPEN_Holiday__c</columns>
    <columns>SPEN_HolidayDateFormula__c</columns>
    <columns>SPEN_DayofWeek__c</columns>
    <columns>SPEN_StartTime__c</columns>
    <columns>SPEN_EndTime__c</columns>
    <columns>SPEN_CurrentTimeFormula__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Connections</value>
    </filters>
    <label>Connections - IVR Operating Hours</label>
</ListView>