force-app/main/default/objects/SPEN_IVROperatinghours__c/listViews/SPEN_Callback.listView-meta.xml
<ListView>
    <fullName>SPEN_Callback</fullName>
    <columns>NAME</columns>
    <columns>SPEN_FlowNameFormula__c</columns>
    <columns>SPEN_isActive__c</columns>
    <columns>SPEN_IsCallBackEnabled__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_IVROperatinghours__c.SPEN_Callback</value>
    </filters>
    <filters>
        <field>SPEN_isActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Callback</label>
</ListView>