force-app/main/default/objects/SPEN_IVROperatinghours__c/listViews/Street_Works.listView-meta.xml
<ListView>
    <fullName>Street_Works</fullName>
    <columns>NAME</columns>
    <columns>SPEN_IVR__c</columns>
    <columns>SPEN_IVRMessage__c</columns>
    <columns>SPEN_Holiday__c</columns>
    <columns>SPEN_HolidayDateFormula__c</columns>
    <columns>SPEN_DayofWeek__c</columns>
    <columns>SPEN_StartTime__c</columns>
    <columns>SPEN_EndTime__c</columns>
    <columns>SPEN_CurrentTimeFormula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_IVR__c</field>
        <operation>equals</operation>
        <value>Street Works</value>
    </filters>
    <label>Street Works</label>
</ListView>